--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Luis
+          <h1 class="mb-5">Luis
             <span class="text-primary">Rodriguez</span>
+            <small><small>DMD</small></small>
           </h1>
           <!-- <div class="subheading mb-5">Ocala -->
             <!-- <a href="mailto:name@email.com">name@email.com</a> -->
