--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/resume.css" rel="stylesheet">
 
   </head>
 
@@ -69,7 +69,7 @@
             <!-- <a href="mailto:name@email.com">name@email.com</a> -->
           <!-- </div> -->
           <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
-          <ul class="list-inline list-social-icons mb-0">
+ <!--          <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
                 <span class="fa-stack fa-lg">
@@ -96,7 +96,7 @@
             </li>
            
             </li>
-          </ul>
+          </ul> -->
         </div>
       </section>
 
@@ -107,14 +107,22 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of Florida · College of Dentistry</h3>
-              <div class="subheading mb-3">Doctor of Dental Medicine</div>
+              <div class="subheading mb-3">Doctor of Dental Medicine · Research Honors</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2014 - May 2018</span>
             </div>
           </div>
 
- 
+ <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">University of Florida · College of Liberal Arts and Sciences</h3>
+              <div class="subheading mb-3">Bachelor of Arts · Spanish Literature and Linguistics</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2010 - May 2014</span>
+            </div>
+          </div>
 
         </div>
       </section>
@@ -127,7 +135,7 @@
             <div class="resume-content mr-auto">
 
             <div class="resume-date text-md-left">
-              <span class="text-primary">Delgado AJ, Dias Ribeiro AP, Quesada A, Rodriguez LE, Hernandez R, Wynkoop B, Dilbone DA. Potential erosive effect of mouthrinses on enamel and dentin. Gen Dent. 2018 May-Jun;66(3) 75-79. PMID: 29714705.</span>
+              <span>Delgado AJ, Dias Ribeiro AP, Quesada A, Rodriguez LE, Hernandez R, Wynkoop B, Dilbone DA. Potential erosive effect of mouthrinses on enamel and dentin. Gen Dent. 2018 May-Jun;66(3) 75-79. PMID: 29714705.</span>
             </div>
 
             </div>
@@ -171,7 +179,7 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+    <script src="js/resume.js"></script>
 
   </body>
 
