--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of Florida · College of Dentistry</h3>
-              <div class="subheading mb-3">Doctor of Dental Medicine · Research Honors</div>
+              <div class="subheading mb-3">Doctor of Dental Medicine · Research Honors Graduate</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2014 - May 2018</span>
