--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- <a href="mailto:name@email.com">name@email.com</a> -->
           <!-- </div> -->
           <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
- <!--          <ul class="list-inline list-social-icons mb-0">
+      <!--     <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
                 <span class="fa-stack fa-lg">
@@ -85,9 +85,9 @@
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
-            </li>
+            </li> -->
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/luis-e-rodr%C3%ADguez-dmd-368681151/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -96,7 +96,7 @@
             </li>
            
             </li>
-          </ul> -->
+          </ul>
         </div>
       </section>
 
