--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Florida · College of Dentistry</h3>
+              <h3 class="mb-0">The University of Florida · College of Dentistry</h3>
               <div class="subheading mb-3">Doctor of Dental Medicine · Research Honors Graduate</div>
             </div>
             <div class="resume-date text-md-right">
@@ -116,7 +116,7 @@
 
  <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Florida · College of Liberal Arts and Sciences</h3>
+              <h3 class="mb-0">The University of Florida · College of Liberal Arts and Sciences</h3>
               <div class="subheading mb-3">Bachelor of Arts · Spanish Literature and Linguistics</div>
             </div>
             <div class="resume-date text-md-right">
@@ -135,7 +135,8 @@
             <div class="resume-content mr-auto">
 
             <div class="resume-date text-md-left">
-              <span>Delgado AJ, Dias Ribeiro AP, Quesada A, Rodriguez LE, Hernandez R, Wynkoop B, Dilbone DA. Potential erosive effect of mouthrinses on enamel and dentin. Gen Dent. 2018 May-Jun;66(3) 75-79. PMID: 29714705.</span>
+              <a href="https://www.researchgate.net/publication/324897492_Potential_erosive_effect_of_mouthrinses_on_enamel_and_dentin"><img class="img-fluid img-profile mx-auto mb-2" src="img/agd.jpg" alt=""  style="float:left;width:120px;height:160px;""></a>
+              Delgado AJ, Dias Ribeiro AP, Quesada A, Rodriguez LE, Hernandez R, Wynkoop B, Dilbone DA. <br><b>Potential erosive effect of mouthrinses on enamel and dentin.</b></br> Gen Dent. 2018 May-Jun;66(3) 75-79. PMID: 29714705.
             </div>
 
             </div>
