--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="resume-content mr-auto">
 
             <div class="resume-date text-md-left">
-              <a href="https://www.researchgate.net/publication/324897492_Potential_erosive_effect_of_mouthrinses_on_enamel_and_dentin"><img class="img-fluid img-profile mx-auto mb-2" src="img/agd.jpg" alt=""  style="float:left;width:120px;height:160px;""></a>
+              <a href="https://www.researchgate.net/publication/324897492_Potential_erosive_effect_of_mouthrinses_on_enamel_and_dentin"><img class="img-fluid img-profile mx-auto mb-2" src="img/agd.jpg" alt="" style="padding-right:10px;float:left;width:120px;height:160px;""></a>
               Delgado AJ, Dias Ribeiro AP, Quesada A, Rodriguez LE, Hernandez R, Wynkoop B, Dilbone DA. <br><b>Potential erosive effect of mouthrinses on enamel and dentin.</b></br> Gen Dent. 2018 May-Jun;66(3) 75-79. PMID: 29714705.
             </div>
 
@@ -161,10 +161,16 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Coming soon...</li>
+              <b>UF College of Dentistry</b> · Clinical Excellence and Professionalism Award - 2018</li>
             <li>
-          
-
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <b>American Academy of Esthetic Dentistry</b> · 2018 Student Award of Merit - 2018</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <b>Academy of Osseointegration</b> · Senior Student Award - 2018</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <b>UF College of Dentistry</b> · Award for Excellence in Research - 2016</li>
 
           </ul>
         </div>
