--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
  <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">The University of Florida · College of Liberal Arts and Sciences</h3>
-              <div class="subheading mb-3">Bachelor of Arts · Spanish Literature and Linguistics</div>
+              <div class="subheading mb-3">Bachelor of Arts · Spanish Literature and Linguistics - Magna Cum Laude</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2010 - May 2014</span>
@@ -164,7 +164,7 @@
               <b>UF College of Dentistry</b> · Clinical Excellence and Professionalism Award - 2018</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              <b>American Academy of Esthetic Dentistry</b> · 2018 Student Award of Merit - 2018</li>
+              <b>American Academy of Esthetic Dentistry</b> · Student Award of Merit - 2018</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <b>Academy of Osseointegration</b> · Senior Student Award - 2018</li>
