--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
  <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">The University of Florida · College of Liberal Arts and Sciences</h3>
-              <div class="subheading mb-3">Bachelor of Arts · Spanish Literature and Linguistics - Magna Cum Laude</div>
+              <div class="subheading mb-3">Bachelor of Arts · Spanish Literature and Linguistics - Cum Laude</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2010 - May 2014</span>
