--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              <b>UF College of Dentistry</b> · Clinical Excellence and Professionalism Award - 2018</li>
+              <b>UF College of Dentistry</b> · Senior Clinical Excellence and Professionalism Award - 2018</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <b>American Academy of Esthetic Dentistry</b> · Student Award of Merit - 2018</li>
