Add research info

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
            <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
+            <a class="nav-link js-scroll-trigger" href="#publications">Publications and Past Research</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -129,14 +129,21 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
-          <h2 class="mb-5">Publications</h2>
+          <h2 class="mb-5">Publications and Past Research</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
 
             <div class="resume-date text-md-left">
-              <a href="https://www.researchgate.net/publication/324897492_Potential_erosive_effect_of_mouthrinses_on_enamel_and_dentin"><img class="img-fluid img-profile mx-auto mb-2" src="img/agd.jpg" alt="" style="padding-right:10px;float:left;width:120px;height:160px;""></a>
+              <a href="https://www.researchgate.net/publication/324897492_Potential_erosive_effect_of_mouthrinses_on_enamel_and_dentin"><img class="img-fluid img-profile mx-auto mb-2" src="img/agd.jpg" alt="" style="padding-right:10px;float:left;width:130px;height:160px;""></a> <br></br><br></br><br></br><br></br>
               Delgado AJ, Dias Ribeiro AP, Quesada A, Rodriguez LE, Hernandez R, Wynkoop B, Dilbone DA. <br><b>Potential erosive effect of mouthrinses on enamel and dentin.</b></br> Gen Dent. 2018 May-Jun;66(3) 75-79. PMID: 29714705.
+            
+              <br></br>
+              
+              <a style="float:center;width:125px;height:160px;""></a>
+              Delgado AJ, Abdulhameed NF, Olafsson VG, Rodriguez LE*, Quesada A, Dilbone DA. 
+              <br><a href="img/poster.pdf"><b>Evaluation of marginal adaptation in Class II cavity preparations with bulk-Fill restorative materials.</b></a> 
+              </br> *Presented in the Academy of General Dentistry 2016 Annual Meeting
             </div>
 
             </div>
