--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               
               <a style="float:center;width:125px;height:160px;""></a>
               Delgado AJ, Abdulhameed NF, Olafsson VG, Rodriguez LE*, Quesada A, Dilbone DA. 
-              <br><a href="img/poster.pdf"><b>Evaluation of marginal adaptation in Class II cavity preparations with bulk-Fill restorative materials.</b></a> 
+              <br><a href="img/poster.pdf"><b>Evaluation of marginal adaptation in Class II cavity preparations with bulk-fill restorative materials.</b></a> 
               </br> *Presented in the Academy of General Dentistry 2016 Annual Meeting
             </div>
 
