--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
   <head>
+    <meta name="google-site-verification" content="SzkmxuOyhqqSrMKMgAcT_DQ6yUoB5fQdepGmE3pTV-k" />
+   
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
