--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
           <p>
 
             <i class="fa-li fa fa-trophy text-warning"></i>
-          <b>American Academy of Esthetic Dentistry</b> · Student Award of Merit - 2018</li>
-        <li>
+          <b>University of Florida College of Dentistry</b>Courtesy Clinical Assistant Professor - August 2019</li>
 
-          
+
+
         </p>
           <!-- <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p> -->
         </div>
