--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Academia">
         <div class="my-auto">
           <h2 class="mb-5">Academia</h2>
           <p>
