--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <p>
 
             <i class="fa-li fa fa-trophy text-warning"></i>
-          <b>Courtesy Clinical Assistant Professor -</b> University of Florida - College of Dentistry</li>
+          <b>Courtesy Clinical Assistant Professor |</b> University of Florida - College of Dentistry</li>
 
 
 
